[gd_scene load_steps=8 format=3 uid="uid://ddo4up7q8cmx2"]

[ext_resource type="Script" uid="uid://by6kfg6fupkv4" path="res://battleManager.gd" id="1_ff5lm"]
[ext_resource type="Texture2D" uid="uid://hx00b05ir0wi" path="res://Combat/iglesia pixel.png" id="2_wbl37"]
[ext_resource type="PackedScene" uid="uid://dhjw7jblqk15w" path="res://Combat/player_1.tscn" id="3_j450y"]
[ext_resource type="PackedScene" uid="uid://cda8enytduqoj" path="res://Combat/player_2.tscn" id="4_nx8es"]
[ext_resource type="PackedScene" uid="uid://b1t5o0lbu3rfb" path="res://Combat/Enemy2.tscn" id="5_55q70"]
[ext_resource type="AudioStream" uid="uid://0qqsgg8qj220" path="res://music/batallaJhonaider.mp3" id="6_sith4"]
[ext_resource type="FontFile" uid="uid://c405i12ltp3y5" path="res://fonts/pixelmix.ttf" id="6_wbl37"]

[node name="SDC2" type="Node2D"]
script = ExtResource("1_ff5lm")
sdc_id = "sdc2"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 99
scale = Vector2(0.73, 0.425)
transform = Transform2D(0.73, 0, 0, 0.425, 0, 0)

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_left = 8.219177
offset_right = 1576.7124
offset_bottom = 1534.1177
texture = ExtResource("2_wbl37")

[node name="Player1" parent="CanvasLayer" instance=ExtResource("3_j450y")]
position = Vector2(623.28766, 1334.1174)
scale = Vector2(0.9547007, 1.9653001)

[node name="Player2" parent="CanvasLayer" instance=ExtResource("4_nx8es")]
position = Vector2(457.53427, 1348.2352)
scale = Vector2(0.79019177, 1.8910109)
hp = 100

[node name="Enemy" parent="CanvasLayer" instance=ExtResource("5_55q70")]
position = Vector2(1023.2878, 1331.7646)
scale = Vector2(0.8732837, 1.2196777)
max_hp = 200
hp = 200
character_name = "Jhonaidel de la luz"

[node name="Camera2D" type="Camera2D" parent="CanvasLayer"]
z_index = 99
z_as_relative = false
position = Vector2(783.5615, 548.2353)
scale = Vector2(1.706, 1.753)
zoom = Vector2(0.735, 0.595)

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchor_left = -0.202
anchor_top = 0.004
anchor_right = 1.36
anchor_bottom = 2.821
offset_left = 39.553345
offset_top = 6.819765
offset_right = 46.97876
offset_bottom = 7.286133
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -29.5
offset_right = 29.5
offset_bottom = 58.0
grow_horizontal = 2
scale = Vector2(2.0321295, 2.4322405)

[node name="TurnLabel" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_wbl37")

[node name="AttackButton" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_wbl37")
text = "Attack
"

[node name="HealButton" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_wbl37")
text = "Heal
"

[node name="ResultLabel" type="Label" parent="CanvasLayer/Control"]
visible = false
layout_mode = 0
offset_left = 748.0
offset_top = 566.0
offset_right = 807.0
offset_bottom = 589.0
theme_override_fonts/font = ExtResource("6_wbl37")

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_sith4")
volume_db = -24.013
pitch_scale = 1.03
autoplay = true
